form_search 0.8 - inputs height

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                     <div class="main-search__form__top">
                         <label for="checkboxOne">
                             <input type="checkbox" name="check" id="checkboxOne"
-                                class="main-search__form__top__checkOne">
+                                class="main-search__form__top__checkOne" checked>
                             <span class="check-span"></span>
                             Полная пошлина</label>
 
                         <label for="checkboxTwo">
                             <input type="checkbox" name="check" id="checkboxTwo"
-                                class="main-search__form__top__checkTwo">
+                                class="main-search__form__top__checkTwo" checked>
                             <span class="check-span"></span>
                             Распил или конструктор</label>
                     </div>
