section main-search 0.8

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             </select>
                         </div>
                         <div class="main-search__form__center__year">
-                            <label for="selectYearAfterLabel">Год выпуска</label>
+                            <label for="selectYearAfterLabel" class="main-search__form__center__year__label">Год выпуска</label>
                             <div class="main-search__form__center__year-wrapper select">
                             <select id="selectYearAfter" class="selectYearAfter select__elem" name="select__elem">
                                 <option value="от" class="selectYearAfterOption">от</option>
