section popular_car 0.8

--- a/index.html
+++ b/index.html
@@ -178,19 +178,19 @@
 
         <section class="main-popularCars">
             <div class="container">
-                <h2 class="main-popularCars__header"></h2>
+                <h2 class="main-popularCars__header">Популярные автомобили</h2>
                 <div class="main-popularCars__var">
-                    <input type="checkbox" class="main-popularCars__var__var1" id="main-popularCars__var__var1">
+                    <input type="radio" class="main-popularCars__var__var1" id="main-popularCars__var__var1">
                     <label for="main-popularCars__var__var1">Любые</label>
-                    <input type="checkbox" class="main-popularCars__var__var2" id="main-popularCars__var__var2">
+                    <input type="radio" class="main-popularCars__var__var2" id="main-popularCars__var__var2">
                     <label for="main-popularCars__var__var2">В&nbsp;наличии</label>
-                    <input type="checkbox" class="main-popularCars__var__var3" id="main-popularCars__var__var3">
+                    <input type="radio" class="main-popularCars__var__var3" id="main-popularCars__var__var3">
                     <label for="main-popularCars__var__var3">Под заказ</label>
                 </div>
                 <div class="main-popularCars__avto">
                     <article class="main-popularCars__avto avto1">
                         <picture class="main-popularCars__avto__avto__pic">
-                            <img src="" alt="avto">
+                            <img src="img/popCar_1280_1.jpg" alt="avto">
                         </picture>
                         <div class="main-popularCars__avto__desr">
                             <h3 class="main-popularCars__avto__desr__name">Honda Fit</h3>
@@ -212,10 +212,10 @@
                     </article>
                     <article class="main-popularCars__avto avto2">
                         <picture class="main-popularCars__avto__avto__pic">
-                            <img src="" alt="avto">
+                            <img src="img/popCar_1280_2.jpg" alt="avto">
                         </picture>
                         <div class="main-popularCars__avto__desr">
-                            <h3 class="main-popularCars__avto__desr__name">BMW&nbsp;&mdash; X5 2005</h3>
+                            <h3 class="main-popularCars__avto__desr__name">BMW-X5 2005</h3>
                             <p class="main-popularCars__avto__desr__V">Объем двигателя: <span>230 л.с.</span></p>
                             <p class="main-popularCars__avto__desr__year">Год: <span>2005&nbsp;г.</span></p>
                             <p class="main-popularCars__avto__desr__mileage">Пробег: <span>110&nbsp;000&nbsp;км</span>
@@ -234,7 +234,7 @@
                     </article>
                     <article class="main-popularCars__avto avto3">
                         <picture class="main-popularCars__avto__avto__pic">
-                            <img src="" alt="avto">
+                            <img src="img/popCar_1280_3.png" alt="avto">
                         </picture>
                         <div class="main-popularCars__avto__desr">
                             <h3 class="main-popularCars__avto__desr__name">Toyota Prius</h3>
