--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         </div>
                     </article>
                 </div>
-                <button class="main-popularCars__showAdd">Показать еще</button>
+                <button class="main-popularCars__showAdd button">Показать еще</button>
             </div>
         </section>
 
@@ -495,7 +495,7 @@
                         <p class="main-feedback__article__avto">Toyota Allion </p>
                     </article>
                 </div>
-                <button class="main-feedback__button">Еще отзывы</button>
+                <button class="main-feedback__button button">Еще отзывы</button>
             </div>
         </section>
 
@@ -577,35 +577,38 @@
                 <h2 class="main-reviews__header">Наши обзоры</h2>
                 <div class="main-reviews__articles">
                     <articles class="main-reviews__articles__article">
-                        <video src="" class="main-reviews__articles__article__video"></video>
+                        <iframe class="main-reviews__articles__article__video" src="https://www.youtube-nocookie.com/embed/dlDYaYIcXM0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h3 class="main-reviews__articles__article__header">Космический Shuttle&nbsp;| HONDA FIT SHUTTLE
                             2013
                         </h3>
                         <p class="main-reviews__articles__article__descr">
                             <span>391 просмотр</span>
+                            <span>&bull;</span>
                             <span>3&nbsp;недели назад</span>
                         </p>
                     </articles>
                     <articles class="main-reviews__articles__article">
-                        <video src="" class="main-reviews__articles__article__video"></video>
+                        <iframe class="main-reviews__articles__article__video" src="https://www.youtube-nocookie.com/embed/XDp3vEoOtwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h3 class="main-reviews__articles__article__header">Компактный минивен I&nbsp;Toyota Siena
                             2017&nbsp;г.</h3>
                         <p class="main-reviews__articles__article__descr">
                             <span>391 просмотр</span>
+                            <span>&bull;</span>
                             <span>3&nbsp;недели назад</span>
                         </p>
                     </articles>
                     <articles class="main-reviews__articles__article">
-                        <video src="" class="main-reviews__articles__article__video"></video>
+                        <iframe class="main-reviews__articles__article__video" src="https://www.youtube-nocookie.com/embed/3ZQJ21MdaWM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h3 class="main-reviews__articles__article__header">Спецтехника по-крупному&nbsp;| KATO KB1500R
                         </h3>
                         <p class="main-reviews__articles__article__descr">
                             <span>391 просмотр</span>
+                            <span>&bull;</span>
                             <span>3&nbsp;недели назад</span>
                         </p>
                     </articles>
                 </div>
-                <button class="main-reviews__button">Смотреть все обзоры</button>
+                <button class="main-reviews__button button">Смотреть все обзоры</button>
             </div>
         </section>
 
@@ -615,6 +618,7 @@
                 <p class="main-contacts__address">Владивосток, ул. Фадеева, д.&nbsp;47&nbsp;строение&nbsp;1</p>
                 <div class="main-contacts__tel">
                     <article class="main-contacts__tel__article">
+                        <div class="main-contacts__tel__article__article1">
                         <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_205_299)">
                                 <path
@@ -629,6 +633,8 @@
                         </svg>
                         <a href="tel:+74232081118" class="main-contacts__tel__article__href">+7 (423) 208-11-18</a>
                         <p class="main-contacts__tel__article__descr">&mdash;&nbsp;для заказа авто</p>
+                    </div>
+                    <div class="main-contacts__tel__article__article1">
                         <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_205_299)">
                                 <path
@@ -644,6 +650,8 @@
                         <a href="tel:+79841977778" class="main-contacts__tel__article__href">+7 (984) 197-77-78</a>
                         <p class="main-contacts__tel__article__descr">&mdash;&nbsp;для заказа авто и&nbsp;мото техники
                         </p>
+                        </div>
+                        <div class="main-contacts__tel__article__article1">
                         <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_205_299)">
                                 <path
@@ -658,20 +666,25 @@
                         </svg>
                         <a href="tel:+79146918505" class="main-contacts__tel__article__href">+7 (914) 691-85-05</a>
                         <p class="main-contacts__tel__article__descr">&mdash;&nbsp;для заказа спецтехники</p>
+                        </div>
                     </article>
                     <article class="main-contacts__tel__article">
+                        <div class="main-contacts__tel__article whatsup-wrapper">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M17.7561 3.13343C15.7993 1.18343 13.1902 0.100098 10.4362 0.100098C4.7108 0.100098 0.0724728 4.72232 0.0724728 10.4279C0.0724728 12.2334 0.579791 14.039 1.44948 15.5557L0 20.9001L5.50802 19.4557C7.02997 20.2501 8.69686 20.6834 10.4362 20.6834C16.1617 20.6834 20.8 16.0612 20.8 10.3557C20.7275 7.68343 19.7129 5.08343 17.7561 3.13343ZM15.4369 14.1112C15.2195 14.689 14.2049 15.2668 13.6976 15.339C13.2627 15.4112 12.6829 15.4112 12.1031 15.2668C11.7408 15.1223 11.2334 14.9779 10.6537 14.689C8.0446 13.6057 6.3777 11.0057 6.23275 10.789C6.08781 10.6445 5.14565 9.41676 5.14565 8.11676C5.14565 6.81676 5.79791 6.23899 6.01533 5.9501C6.23275 5.66121 6.52265 5.66121 6.74007 5.66121C6.88502 5.66121 7.10244 5.66121 7.24738 5.66121C7.39233 5.66121 7.60975 5.58899 7.82718 6.09454C8.0446 6.6001 8.55191 7.9001 8.62439 7.97232C8.69686 8.11676 8.69686 8.26121 8.62439 8.40565C8.55191 8.5501 8.47944 8.69454 8.33449 8.83899C8.18954 8.98343 8.0446 9.2001 7.97212 9.27232C7.82717 9.41676 7.68223 9.56121 7.82718 9.77787C7.97212 10.0668 8.47944 10.8612 9.27665 11.5834C10.2913 12.4501 11.0885 12.739 11.3784 12.8834C11.6683 13.0279 11.8132 12.9557 11.9582 12.8112C12.1031 12.6668 12.6105 12.089 12.7554 11.8001C12.9003 11.5112 13.1178 11.5834 13.3352 11.6557C13.5526 11.7279 14.8571 12.3779 15.0746 12.5223C15.3645 12.6668 15.5094 12.739 15.5819 12.8112C15.6544 13.0279 15.6544 13.5334 15.4369 14.1112Z"
                                 fill="#48D107" />
                         </svg>
-                        <a href="tel:+79841981118" class="main-contacts__tel__article__href">+7 (984) 198-11-18</a>
+                        <a href="tel:+79841981118" class="main-contacts__tel__article__href whatsup">+7 (984) 198-11-18</a>
+                    </div>
+                    <div class="main-contacts__tel__article whatsup-wrapper">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M17.7561 3.13343C15.7993 1.18343 13.1902 0.100098 10.4362 0.100098C4.7108 0.100098 0.0724728 4.72232 0.0724728 10.4279C0.0724728 12.2334 0.579791 14.039 1.44948 15.5557L0 20.9001L5.50802 19.4557C7.02997 20.2501 8.69686 20.6834 10.4362 20.6834C16.1617 20.6834 20.8 16.0612 20.8 10.3557C20.7275 7.68343 19.7129 5.08343 17.7561 3.13343ZM15.4369 14.1112C15.2195 14.689 14.2049 15.2668 13.6976 15.339C13.2627 15.4112 12.6829 15.4112 12.1031 15.2668C11.7408 15.1223 11.2334 14.9779 10.6537 14.689C8.0446 13.6057 6.3777 11.0057 6.23275 10.789C6.08781 10.6445 5.14565 9.41676 5.14565 8.11676C5.14565 6.81676 5.79791 6.23899 6.01533 5.9501C6.23275 5.66121 6.52265 5.66121 6.74007 5.66121C6.88502 5.66121 7.10244 5.66121 7.24738 5.66121C7.39233 5.66121 7.60975 5.58899 7.82718 6.09454C8.0446 6.6001 8.55191 7.9001 8.62439 7.97232C8.69686 8.11676 8.69686 8.26121 8.62439 8.40565C8.55191 8.5501 8.47944 8.69454 8.33449 8.83899C8.18954 8.98343 8.0446 9.2001 7.97212 9.27232C7.82717 9.41676 7.68223 9.56121 7.82718 9.77787C7.97212 10.0668 8.47944 10.8612 9.27665 11.5834C10.2913 12.4501 11.0885 12.739 11.3784 12.8834C11.6683 13.0279 11.8132 12.9557 11.9582 12.8112C12.1031 12.6668 12.6105 12.089 12.7554 11.8001C12.9003 11.5112 13.1178 11.5834 13.3352 11.6557C13.5526 11.7279 14.8571 12.3779 15.0746 12.5223C15.3645 12.6668 15.5094 12.739 15.5819 12.8112C15.6544 13.0279 15.6544 13.5334 15.4369 14.1112Z"
                                 fill="#48D107" />
                         </svg>
-                        <a href="tel:+79841977778" class="main-contacts__tel__article__href">+7 (984) 197-77-78</a>
+                        <a href="tel:+79841977778" class="main-contacts__tel__article__href whatsup">+7 (984) 197-77-78</a>
+                    </div>
                     </article>
                     <article class="main-contacts__tel__article">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
