--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                     </article>
                 </div>
                 <div class="main-contacts__map">
-                    <div id="map"></div>
+                    <div id="map" style="width: 100%; height: 400px"></div>
                 </div>
                 <div class="main-contacts__feedback">
                     <h2 class="main-contacts__feedback__header">Обратная связь</h2>
