--- a/index.html
+++ b/index.html
@@ -708,6 +708,7 @@
                 <div class="main-contacts__feedback">
                     <h2 class="main-contacts__feedback__header">Обратная связь</h2>
                     <form action="" method="POST" class="main-contacts__feedback__form">
+                        <div class="main-contacts__feedback__form-wrapper">
                         <label for="main-contacts__feedback__form__name">Ваше имя</label>
                         <input type="text" class="main-contacts__feedback__form__name"
                             id="main-contacts__feedback__form__name" placeholder="Ввести">
@@ -717,6 +718,7 @@
                             id="main-contacts__feedback__form__tel" placeholder="+7">
 
                         <button class="main-contacts__feedback__form__button">Проконсультировать бесплатно</button>
+                    </div>
                     </form>
                 </div>
             </div>
