popCar section radio

--- a/index.html
+++ b/index.html
@@ -181,12 +181,19 @@
             <div class="container">
                 <h2 class="main-popularCars__header">Популярные автомобили</h2>
                 <div class="main-popularCars__var">
-                    <input type="radio" class="main-popularCars__var__var1" id="main-popularCars__var__var1">
-                    <label for="main-popularCars__var__var1">Любые</label>
-                    <input type="radio" class="main-popularCars__var__var2" id="main-popularCars__var__var2">
-                    <label for="main-popularCars__var__var2">В&nbsp;наличии</label>
-                    <input type="radio" class="main-popularCars__var__var3" id="main-popularCars__var__var3">
-                    <label for="main-popularCars__var__var3">Под заказ</label>
+                    <label for="main-popularCars__var__var1 label-radio">
+                        <input type="radio" name="radio" id="main-popularCars__var__var1"
+                            class="main-popularCars__var__var1" checked>
+                        <span class="radio-span"></span>
+                        Любые</label>
+                       <label for="main-popularCars__var__var2 label-radio"> 
+                    <input type="radio" name="radio" class="main-popularCars__var__var2" id="main-popularCars__var__var2">
+                    <span class="radio-span"></span>
+                    В&nbsp;наличии</label>
+                    <label for="main-popularCars__var__var3 label-radio">
+                    <input type="radio" name="radio" class="main-popularCars__var__var3" id="main-popularCars__var__var3">
+                    <span class="radio-span"></span>
+                    Под заказ</label>
                 </div>
                 <div class="main-popularCars__avto">
                     <article class="main-popularCars__avto avto1">
